cli/src/tests/error/variants.sibs
one:
one: | two
one, | two:
one | two | :three: